| Bug #7384 | listener.cc fails to compile on Solaris (INADDR_NONE undeclared) | ||
|---|---|---|---|
| Submitted: | 17 Dec 2004 17:13 | Modified: | 20 Dec 2004 16:18 |
| Reporter: | Lenz Grimmer | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S1 (Critical) |
| Version: | 5.0.3-pre | OS: | Solaris (Solaris (x86/sparc)) |
| Assigned to: | Petr Chardin | CPU Architecture: | Any |
[17 Dec 2004 17:13]
Lenz Grimmer
[20 Dec 2004 16:18]
Petr Chardin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Solaris doesn't define INADDR_NONE. The definition was moved from mysqld.cc and client.c to the my_net.h to solve the problem with listener.cc and avoid such problems in future.
