BUG#7384 IM fails to compile on Solaris. Solaris doesn't define INADDR_NONE macro. This resulted in compilation failure. (advanced fix)